# ESPCaster

./: .gitignore  CMakeLists.txt  DEFAULT_WIFI_CONFIG.md  README.md  SPOTIFY_CONFIG_TEMPLATE.h  SPOTIFY_INTEGRATION_GUIDE.md  SPOTIFY_INTEGRATION_SUMMARY.md  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
components/chromecast_controller/: CHANGES.md  CMakeLists.txt  chromecast_controller.cpp  chromecast_controller.h  example_usage.cpp
components/chromecast_controller/chromecast_protobuf/: authority_keys.pb-c.c  authority_keys.pb-c.h  authority_keys.proto  cast_channel.pb-c.c  cast_channel.pb-c.h  cast_channel.proto  logging.pb-c.c  logging.pb-c.h  logging.proto
components/chromecast_discovery/: CMakeLists.txt  chromecast_discovery.cpp  chromecast_discovery.h  example_integration.cpp
components/spotify_controller/: CMakeLists.txt  example_usage.cpp  spotify_api_client.cpp  spotify_api_client.h  spotify_auth.cpp  spotify_auth.h  spotify_controller.cpp  spotify_controller.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/Cast/: chromecast_controller_wrapper.cpp  chromecast_controller_wrapper.h  chromecast_discovery_wrapper.cpp  chromecast_discovery_wrapper.h  chromecast_gui_manager.c  chromecast_gui_manager.h  esp_cast.c  esp_cast.h  spotify_config_manager.c  spotify_config_manager.h  spotify_controller_wrapper.cpp  spotify_controller_wrapper.h  spotify_gui_manager.c  spotify_gui_manager.h  wifi_gui_manager.c  wifi_gui_manager.h  wifi_manager.c  wifi_manager.h
